--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Drum Kit</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
 </head>
 
 <body>
@@ -21,9 +22,8 @@
     <button class="l drum">l</button>
   </div>
 
-
   <footer>
-    Made with ❤️ in London.
+    Made with ❤️ in Krakow.
   </footer>
   <script src="index.js"></script>
 </body>
